--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #fdfdfd;
+    background-color: #c0c0c0;
     margin-top: 50px;
     font-size: 20px;
     color: #000000;
@@ -11,6 +11,32 @@ body {
     padding: 20px;
     width: 200px;
     border: 1px solid #000;
+}
+
+#welcome {
+    background-color: rgb(18, 6, 37);
+    margin: 0 auto;
+    padding: 20px;
+    width: 200px;
+    border: 1px solid #000;
+
+    -webkit-box-shadow: -1px -1px 45px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: -1px -1px 45px 0px rgba(0,0,0,0.75);
+    box-shadow: -1px -1px 45px 0px rgba(0,0,0,0.75);
+
+    text-shadow: 2px 2px #3a3a3a;
+
+    font-size: 25px;
+
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    border-radius: 15px;
+}
+
+#welcome .body {
+    color: #fff;
+    padding: 20px;
+    text-align: center;
 }
 
 
