--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,23 @@ body {
     color: #000000;
 }
 
+a {color: #0f0f0f;}
+a:link {
+    text-decoration: none;
+  }
+  
+  a:visited {
+    text-decoration: none;
+  }
+  
+  a:hover {
+    text-decoration: none;
+  }
+  
+  a:active {
+    text-decoration: none;
+  }
+
 #loginForm, #registerForm {
     background-color: rgb(61, 145, 201);
     margin: 0 auto;
@@ -51,6 +68,7 @@ input {
     margin-left: 10px;
     padding: 20px;
     text-align: center;
+    
 }
 
 #register:hover, #login:hover {
